<resources>
    <string name="app_name">dSport</string>

    <!--Universal-Strings-->
    <string name="retry">Retry</string>
    <string name="agb">AGB</string>
    <string name="btn_goon">Go on</string>
    <string name="version">Version:</string>
    <string name="nav_logout">Logout</string>
    <string name="social">Social</string>
    <string name="exercise_units">Exercise units</string>
    <string name="events">Events</string>
    <string name="chats">Chat</string>
    <string name="empty">empty</string>
    <string name="profile_pic_description">Profile picture you Captured for dSport</string>
    <string name="profile_pic_name">dSport profile</string>
    <string name="select_picture">Select Picture</string>
    <string name="friends">Friends</string>
    <string name="units">Units</string>
    <string name="age">Age</string>

    <plurals name="welcome_messages">
        <item quantity="one">Hello, %1$s!\nCheck your Emails to verify your account.</item>
    </plurals>

    <plurals name="add_user_as_friend">
        <item quantity="one">Do you really want to add %1$s as friend?</item>
    </plurals>

    <plurals name="add_friend_failed">
        <item quantity="one">Add %1$s as friend failed!</item>
    </plurals>

    <plurals name="delete_friend_failed">
        <item quantity="one">Delete %1$s as friend failed!</item>
    </plurals>

    <plurals name="decline_friend_failed">
        <item quantity="one">Decline %1$s as friend failed!</item>
    </plurals>

    <plurals name="accept_friend_failed">
        <item quantity="one">Accept %1$s as friend failed!</item>
    </plurals>

    <plurals name="decline_user_as_friend">
        <item quantity="one">Do you want to decline %1$s as friend?</item>
    </plurals>

    <plurals name="delete_user_as_friend">
        <item quantity="one">Do you really want to delete %1$s as friend?</item>
    </plurals>

    <plurals name="already_sended">
        <item quantity="one">You already sent a friend request to %1$s!</item>
    </plurals>

    <string name="new_username_hint">New Username</string>
    <string name="new_firstname_hint">New Firstname</string>
    <string name="new_lastname_hint">New Lastname</string>
    <string name="new_email_hint">New Email</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_post_text_hint">Main Text</string>
    <string name="create_post_header_hint">Your Header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_event_text_hint">Main Text</string>
    <string name="create_event_header_hint">Your Header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_event_date_hint">Date</string>
    <string name="create_event_location_hint">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Posts">Posts</string>
    <string name="nav_pinboard">Pinboard</string>
    <string name="show_likes">Show Likes</string>
    <string name="hide_likes">Hide Likes</string>
    <string name="comments">Comments</string>
    <string name="new_comment">New Comment</string>
    <string name="likes">Likes</string>
    <string name="participant">Participant</string>
    <string name="event_detail_participate_text">Teilnehmen</string>


    <string name="you_plus">You + </string>
    <string name="users">Users</string>
    <string name="studios">Studios</string>
    <string name="unknown">unknown</string>
    <string name="friends_requested">Friends requested</string>
    <string name="friend_invitations">Friend invitations</string>
    <string name="accept_friend">Accept Friend</string>
    <string name="decline_friend">Decline Friendship</string>
    <string name="send_request">Send Request</string>
    <string name="add_friend">Add friend</string>
    <string name="delete_friendship">Delete Friendship</string>
    <string name="no_gps_permission">No GPS Permission!</string>
    <string name="finish_tracking">Finish Tracking</string>
    <string name="pause_tracking">Pause Tracking</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="hour">h</string>
    <string name="minutes">min</string>
    <string name="seconds">s</string>
    <string name="meter">m</string>
    <string name="kilometer">km</string>
    <string name="reset">Reset</string>
    <string name="really_reset_session">Do you really want to reset the current Tracking?</string>
    <string name="close_session">This Button will finally close the current Session! To close the Session press Yes!</string>
    <string name="finish">Finish</string>
    <string name="save_session">Save Session</string>
    <string name="start_new_session">Start new Session</string>


    <string name="create_exrercise_text_hint">Exercise Name</string>
    <string name="create_new_exercise">Create new Exercise</string>
    <string name="start_timed_set">Start timed Set</string>
    <string name="stop_timed_set">Stop timed Set</string>
    <string name="required">This field is required</string>
    <string name="invalid_email">The email address you use is not valid!</string>
    <string name="fields_missmatch">Fields must match</string>
    <string name="SignInLoadingMessage">Signing in</string>
    <string name="RegistrationLinkText">Not a Member? Create your own Account!</string>
    <string name="nav_settings">More</string>
    <string name="bottomnav_title_0">Test</string>
    <string name="ChangeProfileMsg">Changing your account information</string>
    <string name="search_hint">Search</string>
    <string name="search_result_string">Searching</string>
    <string name="user_result_header_string">User</string>
    <string name="event_result_header_string">Events</string>
    <string name="post_result_header_string">Posts</string>
    <string name="friend_requests_header_string">Friend requests</string>
    <string name="friends_header_string">Friends</string>
    <string name="logout_more_fragment_string">Logout</string>
    <string name="excercise_units_more_fragment_string">Excercise Units</string>
    <string name="excercises_more_fragment_string">Excercises</string>
    <string name="events_more_fragment_string">Events</string>
    <string name="my_pinboard_more_fragment_string">Pinboard</string>
    <string name="CreatePostLoadingMessage">Creating your post</string>
    <string name="create_comment_hint">Write a comment</string>
    <string name="Loading_news_feed_message">Loading news feed</string>
    <string name="Loading_events_message">Loading events</string>
    <string name="Loading_pinboard_message">Loading pinboard</string>
    <string name="Loanding_exercises_message">Loading exercises</string>
    <string name="Loading_friends_and_requests_message">Loading friends and requests</string>
    <string name="Loading_exercise_units_message">Loading exercise units</string>
    <string-array name="exercise_type_array">
        <item>Weight</item>
        <item>Distance</item>
        <item>Timed</item>
    </string-array>

</resources>
