<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/user_result_header_string"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/event_result_header_string"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/event_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/post_result_header_string"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/post_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <com.omgproduction.dsport_application.refactored.views.LoadingView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/loading_view_search_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:message="@string/search_result_string" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>