<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/friends_refresher"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/friend_requests_header_string"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/request_result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/friends_header_string"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/friend_result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

        <com.omgproduction.dsport_application.refactored.views.LoadingView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/loading_view_friends_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:message="@string/Loading_friends_and_requests_message" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>