<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.omgproduction.dsport_application.aaRefactored.activities.CreatePostActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/activity_create_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/create_post_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.omgproduction.dsport_application.aaRefactored.views.CheckedEditText
                    android:id="@+id/create_post_title"
                    style="@style/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@android:color/transparent"

                    android:gravity="center"
                    android:hint="@string/create_post_header_hint"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:maxLines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/create_post_title" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/create_post_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_post_picture"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/create_post_camera_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_camera" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/create_post_gallery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_gallery" />
            </android.support.v7.widget.LinearLayoutCompat>

            <com.omgproduction.dsport_application.aaRefactored.views.CheckedEditText
                android:id="@+id/create_post_text"
                style="@style/body"
                android:layout_below="@id/create_post_button_container"
                android:background="@android:color/transparent"
                android:hint="@string/create_post_text_hint"
                android:inputType="textMultiLine|textAutoComplete|textAutoCorrect" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/create_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/create_post_text"
                android:layout_margin="16dp"
                android:src="@drawable/ic_ok"
                app:backgroundTint="@color/colorOkFab" />

        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

    <com.omgproduction.dsport_application.aaRefactored.views.LoadingView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loading_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:message="@string/CreatePostLoadingMessage" />

</android.support.constraint.ConstraintLayout>
