<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_coordinator"
        tools:context=".activities.main.MainActivity">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/toolbar_container"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <android.support.v7.widget.SearchView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:id="@+id/toolbar_search"
                    android:foregroundGravity="right">

                </android.support.v7.widget.SearchView>
            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:id="@+id/tabLayout"
                app:tabMode="fixed"
                app:tabGravity="fill">
            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/friend_list_refresher"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:fitsSystemWindows="true"
            android:layout_below="@id/toolbar_container"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/friend_list_container"
                android:background="@android:color/white"
                android:layout_height="match_parent">
                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/friend_list_linear_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/friends_requested"
                        android:background="#ADADAD"/>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/friend_list_recycler_view_sended">
                    </android.support.v7.widget.RecyclerView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/friend_invitations"
                        android:background="#ADADAD"/>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/friend_list_recycler_view_received">
                    </android.support.v7.widget.RecyclerView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friends"
                        android:textColor="#ffffff"
                        android:background="#ADADAD"/>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/friend_list_recycler_view">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

    </android.support.design.widget.CoordinatorLayout>
    <include layout="@layout/layout_nav"/>
</android.support.v4.widget.DrawerLayout>